--- a/prisma/docker-compose.yml
+++ b/prisma/docker-compose.yml
@@ -13,10 +13,10 @@ services:
         databases:
           default:
             connector: postgres
-            host: ec2-34-248-165-3.eu-west-1.compute.amazonaws.com
-            database: d5j2vc2fcs1dod
-            user: dmruradyrjulrm
-            password: 7fe9a891a3fce318957c64644691f8cb829b62cd295cc355886c964ac1a98314
+            host: ec2-54-217-213-79.eu-west-1.compute.amazonaws.com
+            database: dfh2vi04v2f6ib
+            user: epnjwhdyoijwih
+            password: 1b26bdfa2da0c79ef6aebca65fdef1ebf28b39d15d9219d4594e2743894ad894
             ssl: true
             rawAccess: true
             port: '5432'
