--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,5 +1,6 @@
 endpoint: http://localhost:4466
 datamodel: datamodel.graphql
+secret: mysupersecretpassw0rdwithazero
 generate:
   - generator: graphql-schema
     output: ../src/generated/prisma.graphql
