--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,6 +1,6 @@
-endpoint: http://localhost:4466
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.graphql
-secret: mysupersecretpassw0rdwithazero
+secret: ${env:PRISMA_SECRET}
 generate:
   - generator: graphql-schema
     output: ../src/generated/prisma.graphql
