--- a/package.json
+++ b/package.json
@@ -6,27 +6,34 @@
   "scripts": {
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js -e js,graphql --exec babel-node",
-    "get-schema": "graphql-codegen --config ./codegen.yml"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
+    "test": "env-cmd ./config/test.env jest --watch",
+    "get-schema": "graphql get-schema -p prisma --dotenv config/dev.env"
   },
-  "keywords": [],
+  "jest": {
+    "globalSetup": "./tests/config/globalSetup.js",
+    "globalTeardown": "./tests/config/globalTeardown.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
+    "@babel/polyfill": "^7.0.0",
+    "apollo-boost": "^0.1.14",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
-    "env-cmd": "^10.1.0",
-    "graphql-cli": "^4.1.0",
+    "cross-fetch": "^2.2.2",
+    "env-cmd": "^8.0.2",
+    "graphql": "^14.0.2",
+    "graphql-cli": "^2.16.4",
     "graphql-yoga": "^1.18.3",
-    "jsonwebtoken": "^8.5.1",
-    "prisma-binding": "^2.3.16"
+    "jsonwebtoken": "^8.3.0",
+    "prisma-binding": "^2.1.1"
   },
   "devDependencies": {
-    "@graphql-cli/codegen": "^1.17.12",
-    "@graphql-codegen/schema-ast": "^1.17.8",
-    "nodemon": "^2.0.3"
+    "jest": "^23.5.0",
+    "nodemon": "^1.17.5"
   }
 }
