--- a/prisma/docker-compose.yml
+++ b/prisma/docker-compose.yml
@@ -13,10 +13,10 @@ services:
         databases:
           default:
             connector: postgres
-            host: ec2-54-217-213-79.eu-west-1.compute.amazonaws.com
-            database: dfh2vi04v2f6ib
-            user: epnjwhdyoijwih
-            password: 1b26bdfa2da0c79ef6aebca65fdef1ebf28b39d15d9219d4594e2743894ad894
+            host: process.env.PRISMA_HOST
+            database: process.env.PRISMA_DB
+            user: process.env.PRISMA_USER
+            password: process.env.PRISMA_PWD
             ssl: true
             rawAccess: true
             port: '5432'
